[project]
name = "aon-a2a"
version = "0.1.0"
description = ""
authors = [
    {name = "myeonggil",email = "echosoul1994@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "a2a-sdk (>=0.2.5,<0.3.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "groq (>=0.27.0,<0.28.0)",
    "langchain-groq (>=0.3.2,<0.4.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "google-adk (>=1.4.2,<2.0.0)",
    "autogen (>=0.9.3,<0.10.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "greenlet (>=3.2.3,<4.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pykis (>=0.7.0,<0.8.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
